Temporaryrily add min-height into graph-legend css (to prevent graph wrapping)

--- a/server/priv/css/app.css
+++ b/server/priv/css/app.css
@@ -237,4 +237,5 @@ iframe {
 
 .graph-legend {
     font-size: 9px;
+    min-height: 50px;
 }
